# mm-pymac

./: .gitignore  ADR.md  CLAUDE.md  LICENSE  README.md  justfile  pyproject.toml
examples/: lock_events_cli.py  lock_events_tray.py
src/mm_pymac/: __init__.py  clipboard.py  dialog.py  lock_screen.py  tray.py
tests/mm_pymac/: test_clipboard.py  test_dialog.py
